<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/majTextViewMessage"
        android:layout_width="297dp"
        android:layout_height="23dp"
        android:layout_marginBottom="120dp"
        android:text="@string/maj_message"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/majButtonSupprimer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="288dp"
        android:text="@string/maj_delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/majButtonAjouter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:text="@string/maj_add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/majButtonQuitterListe"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:onClick="majQuit"
        android:text="@string/maj_quit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/majEditTextQte"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="430dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/maj_qte"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/majEditTextCode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="490dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/maj_code"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/majTextViewTitre"
        android:layout_width="297dp"
        android:layout_height="23dp"
        android:layout_marginTop="80dp"
        android:text="@string/maj_title"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>