<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menuTextViewTitre"
        android:layout_width="302dp"
        android:layout_height="66dp"
        android:layout_marginTop="80dp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuButtonMajEchantillon"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:onClick="openMajEchantillon"
        android:text="@string/main_maj_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuButtonQuitter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="quitApp"
        android:text="@string/main_quit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuButtonListeEchantillons"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:onClick="openListeEchantillon"
        android:text="@string/main_list_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuButtonAjoutEchantillon"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:onClick="openAjoutEchantillon"
        android:text="@string/main_add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>