<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ajoutButtonAjouter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:text="@string/echant_add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ajoutButtonQuitter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="190dp"
        android:onClick="echantQuit"
        android:text="@string/echant_quit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/menuTextViewEchantillon"
        android:layout_width="297dp"
        android:layout_height="23dp"
        android:layout_marginTop="80dp"
        android:text="Saisie d'un nouvel échantillon :"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ajoutTextViewMessage"
        android:layout_width="297dp"
        android:layout_height="23dp"
        android:layout_marginBottom="120dp"
        android:text="@string/echant_message"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ajoutEditTextCode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="490dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/echant_code"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ajoutEditTextLib"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="430dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/echant_libelle"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ajoutEditTextStock"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="370dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/echant_stock"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>